# LaTeX-To-Typst

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
Assets/: header.txt
Assets/Headers/: article_header.txt  article_header.typ  book_header.txt  book_header.typ  report_header.txt  report_header.typ  standard_header.txt  standard_header.typ
Assets/Input/: doc.tex  input.tex
Assets/Input/Documentation/: doc.tex
Assets/Input/ErrorCase/: error_case.tex
Assets/Input/ErrorCases/: error_case.tex
Assets/Input/TestCases/: code.tex  comments.tex  figure.tex  hyperlinks_test.tex  package_test.tex  space_breaks.tex  tables.tex  text_alignment.tex  text_formatting.tex  text_listing.tex
Assets/InputExample/: doc.tex  input.tex
Assets/Output/: doc.typ  doc_AST.txt  doc_ParseTree.txt
Assets/Output/Documentation/: doc.typ  input.typ  output_AST.txt  output_ParseTree.txt
Assets/Output/ErrorCase/: error_output_AST.txt  error_output_ParseTree.txt  error_output_codegen.typ
Assets/Output/ErrorCases/: error_output_AST.txt  error_output_ParseTree.txt  (+1 more)
Assets/OutputExample/: output.txt  output_AST.txt  output_ParseTree.txt  output_codegen.txt  output_codegen.typ
Explaination/: Date Type Test  Latex2Typst Case  Parser
src/: codegen.rs  globals.rs  latex_parser.rs  latex_semantic.rs  lib.rs  main.rs  utils.rs
src/Grammars/: latex.pest
src/codegen/: block_trans_map.rs  command_trans_map.rs  trans_map.rs
src/latex_parser/: latex.pest  latex_math.pest
src/latex_semantic/: ast_structure.rs  reqarg_map.rs
tests/: tests.rs
(+89 files in other folders)
