[package]
name = "LaTeX-To-Typst"
version = "0.1.0"
edition = "2024"

[dependencies]
# pest is a general purpose parser written in Rust with a focus on accessibility, correctness, and performance.
# It uses parsing expression grammars (or PEG) as input, which are similar in spirit to regular expressions,
# but which offer the enhanced expressivity needed to parse complex languages.
pest = "2.8.6"
pest_derive = "2.8.6"
chrono = "0.4.44"